# cookiecutter-llm-workflow

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
